2017-05-31  Kubo Takehiro <kubo@jiubao.org>
	* docs/hanging-after-inactivity.md:
	    Add a document about tcp_keepalive and tcp_keepalive_time properties.
	* README.md, docs/timeout-parameters.md, lib/oci8/properties.rb:
	    Add links to the TCP keepalive document.

2017-05-21  Kubo Takehiro <kubo@jiubao.org>
	* docs/install-instant-client.md: Add a link to the Visual
	    C++ 2013 redistributable package required to use Oracle 12.2.

2017-05-08  Kubo Takehiro <kubo@jiubao.org>
	* lib/oci8.rb: Fix for RubyInstaller2 for Windows.
	    https://github.com/oneclick/rubyinstaller2/issues/11

2017-05-07  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Use Win32::Registry instead of Win32API
	    to compile ruby-oci8 on the latest cygwin.
	    (github issue #167)

2017-02-14  Kubo Takehiro <kubo@jiubao.org>
	* test/test_connstr.rb: fix test to pass the previous commit.

2017-02-14  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/hook_funcs.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  lib/oci8/oci8.rb, lib/oci8/properties.rb:
	    Add tcp_keepalive options to OCI8.properties.

2017-01-14  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/error.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c: Fix memory leaks when `require 'oci8'` raises a LoadError.

2017-01-08  Kubo Takehiro <kubo@jiubao.org>
	* docs/install-binary-package.md, docs/install-instant-client.md:
	    Update documents for installation on Windows.

2017-01-07  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: If libclntsh.so exports and imports same
	    functions, their PLT entries are forcedly modified to point
	    to itself not to use functions in other libraries.
	    (Only on Linux and macOS)
	* README.md, docs/ldap-auth-and-function-interposition.md:
	    Add document about "LDAP Authentication and Function Interposition."

2016-12-28  Yavor Nikolov <nikolov.javor@gmail.com>
	* README.md: add build status and Gem version badges
	    (merged at 2016-12-29)
