@@ -1,3 +1,7 @@
+2017-06-06  Kubo Takehiro <kubo@jiubao.org>
+	* mkpkg-win32.rb: Use RubyInstaller2 to compile binary gems for
+	    ruby 2.4 on Windows.
+
 2017-05-31  Kubo Takehiro <kubo@jiubao.org>
 	* docs/hanging-after-inactivity.md:
 	    Add a document about tcp_keepalive and tcp_keepalive_time properties.
